<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QingSteam</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="tab_news">疫情新闻</string>
    <string name="tab_data">最新数据</string>
    <string name="tab_scholar">知疫学者</string>

    <string name="bar_search">搜索</string>
    <string name="bar_category">分类</string>
    <string name="search_hint">请输入</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="view_news_content">正文</string>
    <string name="view_news_title">标题</string>
    <string name="view_footer_hint">加载中</string>
    <string name="view_scholar_detail_bio">简介</string>
    <string name="view_scholar_detail_edu">教育经历</string>
    <string name="view_scholar_detail_homepage">主页</string>
    <string name="view_scholar_detail_work">工作经历</string>
    <string name="view_scholar_detail_field">研究领域</string>
    <string name="view_entity_detail_subtitle">Entity</string>
    <string name="view_entity_detail_prop">Properties</string>
    <string name="view_entity_detail_relation">Relations</string>
    <string name="view_detial_toolbar_share">分享</string>
</resources>
