<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/view_detail_title"
        layout="@layout/list_item_scholar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"

                android:text="@string/view_scholar_detail_bio"/>
            <TextView
                android:id="@+id/view_scholar_detail_bio"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/view_scholar_detail_edu"/>
            <TextView
                android:id="@+id/view_scholar_detail_edu"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/view_scholar_detail_homepage"/>
            <TextView
                android:id="@+id/view_scholar_detail_homepage"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/view_scholar_detail_work"/>
            <TextView
                android:id="@+id/view_scholar_detail_work"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="5dp"
                android:text="@string/view_scholar_detail_field"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>