<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ScrollViewCount">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/view_entity_detail_name"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/view_entity_detail_hot"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/view_entity_detail_subtitle"/>
                <TextView
                    android:id="@+id/view_entity_detail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.java.chenyuxiang.view.UrlImageView
                android:layout_margin="5dp"
                android:id="@+id/view_entity_detail_img"
                android:scaleType="fitCenter"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/view_entity_detail_relation"/>
        <ListView
            android:id="@+id/view_entity_detail_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedScrolling" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/view_entity_detail_prop"/>
        <ListView
            android:id="@+id/view_entity_detail_prop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedScrolling" />
    </LinearLayout>
</ScrollView>